--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Rameyza Elya Ramadhani</h1>
     <p>Siswa smk yang tertarik dengantehnologi dan desain. Selamat datang di website pertama saya!</p>
     <a href="https://www.istagram.com/xyz_ellya">kunjungi instagram Saya</a>
-    <button id="sapaButton"Sapa Saya!</button>
+    <button id="sapaButton">Sapa Saya!</button>
   </div>
 <script src="script.js"></script>
 </body>
