--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <img src="punya elya.jpeg" alt="Foto Profil Saya">
     <h1>Rameyza Elya Ramadhani</h1>
     <p>Siswa smk yang tertarik dengantehnologi dan desain. Selamat datang di website pertama saya!</p>
-    <a href="https://www.istagram.com/xyz_ellya">kunjungi instagram Saya</a>
-    <button id="sapaButton">Sapa Saya!</button>
-  </div>
+    <a href="https://www.istagram.com/xyz_ellya">kunjungi instagram saya</a>
+  <button id="sapaButton">Sapa Saya!</button>
+</div>
 <script src="script.js"></script>
 </body>
 </html>
