--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Profil Digital Elyaa</title>
+  <title>Profil Digital-Elyaa</title>
   <link rel="stylesheet"href="style.css">
 </head>
 <body>
-  <div class="kartu-profil">
+    <div class="kartu-profil">
     <img src="punya elya.jpeg" alt="Foto Profil Saya">
     <h1>Rameyza Elya Ramadhani</h1>
-    <p>Siswa smk yang tertarik dengantehnologi dan desain. Selamat datang di website pertama saya!</p>
+    <p>Siswa smk yang tertarik dengan tehnologi dan desain. Selamat datang di website pertama saya!</p>
     <a href="https://www.istagram.com/xyz_ellya">Kunjungi Instagram Saya</a>
     <button id="sapaButton">Sapa Saya!</button>
   </div>
