--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div class="kartu-profil">
-    <img src="punya elya.jpeg" alt="Foto Profil Saya">
+    <img src="elyaaja.jpg" alt="Foto Profil Saya">
     <h1>Rameyza Elya Ramadhani</h1>
     <p>Siswa smk yang tertarik dengan tehnologi dan desain. Selamat datang di website pertama saya!</p>
     <a href="https://www.istagram.com/xyz_ellya">Kunjungi Instagram Saya</a>
