--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <img src="elyaaja.jpg" alt="Foto Profil Saya">
     <h1>Rameyza Elya Ramadhani</h1>
     <p>Siswa smk yang tertarik dengan tehnologi dan desain. Selamat datang di website pertama saya!</p>
-    <a href="https://www.istagram.com/xyz_ellya">Kunjungi Instagram Saya</a>
+    <a href="https://www.instagram.com/xyz_ellya">Kunjungi Instagram Saya</a>
     <button id="sapaButton">Sapa Saya!</button>
   </div>
 <script src="script.js"></script>
